# metadata-automation

./: .gitignore  0_gen_linkml.py  README.md  gen_sempyro.py  gen_shaclplay.py  gen_shacls.py  gen_shacls_from_shaclplay.py  generate_example_outputs.sh  imports_gen_sempyro.py  pyproject.toml  requirements.txt
.github/workflows/: pull-request.yml
inputs/: EUCAIM.xlsx  GDI_v1.1.xlsx  Health-RI-Metadata_CoreGenericHealth_v2-0-0-duplicate.xlsx  Health-RI-Metadata_CoreGenericHealth_v2-0-0.xlsx  HealthRI_v2.0.2.xlsx  Metadata_CoreGenericHealth_v2.xlsx
inputs/sempyro/: imports.yaml  sempyro_types.yaml  validation_logic.yaml
inputs/shacls/: SHACL-dataset.xlsx  shaclplay-template.xlsx
linkml-definitions/: rdf_model.yaml  types.yaml
linkml-definitions/dcat/: dcat-vcard.yaml  dcat_dataset.yaml  dcat_resource.yaml  dcat_vcard.yaml  foaf_agent.yaml
linkml-definitions/foaf/: foaf_agent.yaml
linkml-definitions/vcard/: dcat_vcard.yaml
metadata_automation/: cli.py  utils.py
metadata_automation/linkml/: creator.py
metadata_automation/sempyro/: cleanup.py  inheritance_inspector.py  sempyro_generator.py  utils.py
metadata_automation/shacl/: utils.py
metadata_automation/shaclplay/: __init__.py  converter.py  utils.py  vocab_mappings.py
outputs/linkml/: sempyro_types.yaml
outputs/markdown/: Agent.md  DCATDataset.md  DCATVCard.md  dcat-dataset.md  index.md
outputs/shacl_shapes/: dcat_dataset.ttl  dcat_resource.ttl  dcat_vcard.ttl  foaf_agent.ttl
outputs/shaclplay/: SHACL-adms_identifier.xlsx  SHACL-agent.xlsx  SHACL-attribution.xlsx  SHACL-catalogue.xlsx  SHACL-checksum.xlsx  SHACL-dataservice.xlsx  SHACL-dataset.xlsx  SHACL-datasetseries.xlsx  SHACL-distribution.xlsx  SHACL-kind.xlsx  SHACL-periodoftime.xlsx  SHACL-qualitycertificate.xlsx  SHACL-relationship.xlsx  SHACL-resource.xlsx
sempyro_classes/dcat/: dcat_dataset.py  dcat_resource.py
shacl_shapes/: dcat_dataset.ttl
temp-linkml/foaf/: foaf-Agent.yaml
temp-linkml/hri/: hri-Agent.yaml  hri-Catalog.yaml  hri-Dataset.yaml  hri-Kind.yaml
temp-linkml/vcard/: vcard-Kind.yaml
templates/sempyro/: attribute.py.jinja  enum.py.jinja  module.py.jinja
tests/: README.md  conftest.py  create_test_files.py  test_cli_additional_coverage.py  test_cli_edge_cases.py  test_cli_error_handling.py  test_cli_inheritance_inspector.py  test_cli_sempyro.py  test_cli_shacl_from_shaclplay.py  test_cli_shaclplay.py  test_coverage_units.py  test_utils.py
(+114 files in other folders)
