[project]
name = "metadata-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black==25.1.0",
    "click==8.3.1",
    "linkml==1.9.2",
    "linkml-runtime==1.9.3",
    "pandas==2.3.1",
    "ruff>=0.14.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["metadata_automation"]

[tool.ruff]
line-length = 120
lint.select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C90",  # mccabe cyclomatic complexity
    "G",  # flake8-logging-format
]

[project.scripts]
metadata-automation = "metadata_automation.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=metadata_automation"
